--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ sidebar-avatar: img/avatar-by.jpg      # use absolute URL, seeing it's used in b
 RSS: false
 # weibo_username:     qiubaiying
 zhihu_username:     
-github_username:    
+github_username:    wmmou
 facebook_username:  
 jianshu_username:   
 #twitter_username:   qiubaiying
